--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -108,13 +108,12 @@ a > .category-title, .hamburger > h2 {
 /* Mobile CSS */
 @media only screen and (max-width: 650px) {
   .sidebar{
-    position: sticky;
+    position: fixed;
     top: 0;
     right: 0;
     left: 0;
     bottom: auto;
     min-height: 0;
-    height: auto;
     max-height: 50px;
     min-width: 100%;
     justify-content: flex-start;
@@ -153,6 +152,7 @@ a > .category-title, .hamburger > h2 {
   .sidebar-expanded{
     max-width: 100vw;
     max-height: 800px;
+    height: auto; 
   }
 
   .sidebar-expanded > a{
@@ -162,5 +162,4 @@ a > .category-title, .hamburger > h2 {
   .settings{
     margin: 0 0 10px 0;
   }
-
 }
