--- a/src/index.css
+++ b/src/index.css
@@ -124,13 +124,16 @@ code {
   flex-direction: row;
   position: relative;
   width: 100%;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 main{
-  /* min-width: 100%; */
   width: 100%;
-  padding: 20px 20px;
+  padding: 20px 8px 0 20px;
   min-height: 100vh;
+  overflow-y: scroll;
+  overflow-x: visible;
 }
 
 h1{
@@ -162,11 +165,11 @@ label, input{
 
 /* Custom Scrollbar */
 ::-webkit-scrollbar {
-  width: 14px;
+  width: 12px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(194, 194, 194);
+  background-color: rgb(204, 204, 204);
   border: 4px solid rgba(0, 0, 0, 0);
   background-clip: padding-box;
   border-radius: 9999px;
@@ -219,7 +222,9 @@ Mobile CSS
   }
 
   main{
-    padding: 20px 12px;
+    margin-top: 46px;
+    margin-bottom: 0;
+    padding: 20px 2px 20px 12px;
     min-height: auto;
   }
 }
